test/classes/casts/argumentCoerce_ConstIn/error/from-unmanaged-Parent-to-shared-Child.chpl
// AUTO-GENERATED: Do not edit
class A {}
class Parent {}
class Child : Parent {}
// coercing from unmanaged Parent to shared Child
proc bar(const in x: shared Child) {}
proc foo() {
  var a = new unmanaged Parent();
  bar(a);
}
proc main() {
  foo();
}
